# csci-2011-project-1

./: Cargo.toml  README.md  libraryTables.sql  populateLibraryTables.sql
frontend/: package.json  pnpm-lock.yaml
frontend/src/lib/: views.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/books/: +page.svelte
frontend/src/routes/books/new/: +page.svelte
frontend/src/routes/borrowings/: +page.svelte
frontend/src/routes/members/: +page.svelte
frontend/src/routes/members/[id]/: +page.svelte  +page.ts
frontend/src/routes/members/[id]/new/: +page.svelte  +page.ts
frontend/src/routes/members/new/: +page.svelte
src/: main.rs
src/routes/: books.rs  borrowings.rs  members.rs  mod.rs
src/views/: books.rs  borrowings.rs  members.rs  mod.rs
