[package]
name = "csci211-project"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "projectone"
path = "src/main.rs"


[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
] }
tracing = "0.1.40"
